feature: Playlist 조회 기능 수정 Playlist 조회에서 Track 조회 제거